--- a/apps/tutorial/package.json
+++ b/apps/tutorial/package.json
@@ -12,6 +12,7 @@
     "build": "echo NOTHING",
     "test": "echo TODO",
     "tutorial1": "ts-node -T src/tutorial1.ts",
+    "useZkVerify": "ts-node -T src/useZkVerify.ts",
     "useNebraUpa": "ts-node -T src/useNebraUpa.ts",
     "prettier:write": "prettier --write ./src",
     "lint": "eslint --ignore-path ./.eslintignore --ext .js,.ts ."
@@ -27,7 +28,8 @@
     "node-fetch": "^3.3.2",
     "tslog": "^4.9.2",
     "typescript": "^5.4.5",
-    "yargs": "^17.7.2"
+    "yargs": "^17.7.2",
+    "zkverifyjs": "^0.3.1"
   },
   "devDependencies": {
     "rimraf": "^5.0.6",
